# code-assist

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
code_assist/: cli.py  utils.py
code_assist/llm_thread/: llm_thread_abstract.py  openai_thread.py
